--- a/mcp-rust-server/Cargo.toml
+++ b/mcp-rust-server/Cargo.toml
@@ -12,6 +12,7 @@ tracing-subscriber = { version = "0.3.19", features = ["fmt","env-filter"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+env_logger = "0.11"
 
 # Local CLI library
 syncable-cli = { path = "cli" }
