--- a/mcp-rust-server/Cargo.toml
+++ b/mcp-rust-server/Cargo.toml
@@ -13,9 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.11"
-
-# Local CLI library
-syncable-cli = { path = "cli" }
+syncable-cli = "0.9.8"
 
 [[bin]]
 name = "mcp-stdio"
