feat: add replease plz path to ci pipeline in the pr section

--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Run release-plz
         uses: release-plz/action@v0.5
         with:
-          command: release-pr
+          command: release-pr --manifest-path mcp-rust-server/Cargo.toml
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_PLZ_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
