bugfix: remove category

--- a/rust-mcp-server-syncable-cli/Cargo.toml
+++ b/rust-mcp-server-syncable-cli/Cargo.toml
@@ -22,8 +22,7 @@ categories = [
     "command-line-utilities",
     "network-programming",
     "security",
-    "web-programming",
-    "infrastructure"
+    "web-programming"
 ]
 
 [dependencies]
