--- a/rust-mcp-server-syncable-cli/Cargo.toml
+++ b/rust-mcp-server-syncable-cli/Cargo.toml
@@ -37,6 +37,7 @@ env_logger = "0.11"
 syncable-cli = "0.11.1"
 axum = { version = "0.8.4", features = ["json"] }
 futures = "0.3.31"
+bytes = "1.10.1"
 
 [[bin]]
 name = "mcp-stdio"
@@ -45,10 +46,6 @@ path = "src/main.rs"
 [[bin]]
 name = "mcp-sse"
 path = "src/main_sse.rs"
-
-[[bin]]
-name = "mcp-rest"
-path = "src/main_rest.rs"
 
 [dev-dependencies]
 assert_cmd = "2"
