--- a/rust-mcp-server-syncable-cli/Cargo.toml
+++ b/rust-mcp-server-syncable-cli/Cargo.toml
@@ -34,7 +34,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.11"
-syncable-cli = "0.11.1"
+syncable-cli = "0.12.0"
 axum = { version = "0.8.4", features = ["json"] }
 futures = "0.3.31"
 bytes = "1.10.1"
@@ -56,6 +56,7 @@ proptest = "1"
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["blocking"] }
 http = "0.2"
+tokio-test = "0.4.4"
 
 [profile.release]
 opt-level = 3
