--- a/rust-mcp-server-syncable-cli/Cargo.toml
+++ b/rust-mcp-server-syncable-cli/Cargo.toml
@@ -1,38 +1,43 @@
 [package]
-name = "mcp-rust-server"
-version = "0.1.0"
+name = "rust-mcp-server-syncable-cli"
+version = "0.1.9"
 edition = "2021"
-authors = ["Lishuai Jing <lishuai@syncable.dev>, Alex Holmberg<axth@syncable.dev>"]
+authors = [
+    "Lishuai Jing <lishuai@syncable.dev>",
+    "Alex Holmberg <axth@syncable.dev>",
+]
 description = "High-performance Model Context Protocol (MCP) server for code analysis, security scanning, and project insights."
 license = "MIT"
 repository = "https://github.com/syncable-dev/syncable-cli-mcp-server"
+homepage = "https://github.com/syncable-dev/syncable-cli-mcp-server"
+documentation = "https://docs.rs/rust-mcp-server-syncable-cli"
 readme = "README.md"
 
+# crates.io discoverability
 keywords = [
-    "mcp",
-    "mcp-server",
-    "AI-agents",
-    "cli",
-    "infrastructure",
-    "devops",
+    "mcp", "mcp-server", "AI-agents", "cli",
+    "devops"
+]
+categories = [
+    "command-line-utilities",
+    "network-programming",
     "security",
-    "analysis",
-    "scan",
-    "automation",
-    "rust"
+    "web-programming"
 ]
 
 [dependencies]
-# MCP server dependencies
 async-trait = "0.1.88"
 rust-mcp-sdk = "0.4.3"
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["fmt","env-filter"] }
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.11"
-syncable-cli = "0.10.2"
+syncable-cli = "0.13.0"
+axum = { version = "0.8.4", features = ["json"] }
+futures = "0.3.31"
+bytes = "1.10.1"
 
 [[bin]]
 name = "mcp-stdio"
@@ -51,10 +56,10 @@ proptest = "1"
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["blocking"] }
 http = "0.2"
+tokio-test = "0.4.4"
 
 [profile.release]
 opt-level = 3
 lto = true
 codegen-units = 1
 panic = "abort"
-
