--- a/mcp-python-server-client/pyproject.toml
+++ b/mcp-python-server-client/pyproject.toml
@@ -5,6 +5,7 @@ description = "Demo examples to use for AI Agents with MCP"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "agno>=2.0.4",
     "langchain>=0.3.25",
     "langchain-mcp-adapters>=0.1.7",
     "langchain-openai>=0.3.21",
@@ -12,4 +13,6 @@ dependencies = [
     "mcp[cli]>=1.9.3",
     "python-dotenv>=1.1.0",
     "rich>=13.0.0",
+    "uvicorn>=0.23.2",
+    "pydantic>=2.0.0",
 ]
